# appindicators

./: .gitignore  .project  .pydevproject  CONTRIBUTING.md  DEVELOPERS.md  README.md  TODO.md  TODO.txt
indicator-fortune/: CHANGELOG.md  build-debian  pyproject.toml
indicator-fortune/packaging/debian/: changelog  control  install
indicator-fortune/packaging/linux/: indicator-fortune.py.desktop
indicator-fortune/packaging/linux/debian/: control.cfg
indicator-fortune/po/: POTFILES.in  indicator-fortune.pot
indicator-fortune/po/ru/: indicator-fortune.po
indicator-fortune/src/: indicator-fortune.py
indicator-fortune/src/indicatorfortune/: indicator-fortune.py
indicator-lunar/: CHANGELOG.md  build-debian  pyproject.toml
indicator-lunar/packaging/debian/: changelog  control  install
indicator-lunar/packaging/linux/: indicator-lunar.py.desktop
indicator-lunar/packaging/linux/debian/: control.cfg  postinst  postrm
indicator-lunar/po/: POTFILES.in  indicator-lunar.pot
indicator-lunar/po/ru/: indicator-lunar.po
indicator-lunar/src/: apparentmagnitude.py  astrobase.py  astropyephem.py  astroskyfield.py  checkMPCAgainstXEphem.py  checkMPCDatabaseAgainstMPCFiles.py  cometsFilteredByApparentMagnitude.py  createCommonNameStarsEphemeris.py  createEphemerisStars.py  createephemerisstars.py  dataprovider.py  dataproviderapparentmagnitude.py  dataprovidergeneralperturbation.py  dataproviderorbitalelement.py  eclipse.py  filterCometsAndMinorPlanets.py  generalperturbation.py  indicator-lunar.py  lowellMinorPlanetFilter.py  lowellMinorPlanetToMPC.py  lowellMinorPlanetToXEphem.py  mpcCometToXEphem.py  mpcMinorPlanetFilter.py  mpcMinorPlanetToXEphem.py  orbitalelement.py  testMagnitude.py  testOrbitalElement.py  testOrbitalElement2.py  testSatellite.py  testSatellites2.py  twolineelement.py  unittests.py
indicator-lunar/src/development/: astroskyfield.py
indicator-lunar/src/indicatorlunar/: astrobase.py  astropyephem.py  dataproviderapparentmagnitude.py  dataprovidergeneralperturbation.py  dataproviderorbitalelement.py  eclipse.py  indicator-lunar.py
indicator-lunar/src/utils/: createephemerisplanets.py  createephemerisstars.py  filterCometsAndMinorPlanets.py  lowellMinorPlanetToMPC.py  lowellMinorPlanetToXEphem.py  mpcCometToXEphem.py  mpcMinorPlanetToXEphem.py
indicator-ppa-download-statistics/: CHANGELOG.md  build-debian  indicator-ppa-download-statistics.py.desktop  pyproject.toml
indicator-ppa-download-statistics/packaging/debian/: changelog  control  install
indicator-ppa-download-statistics/packaging/linux/debian/: control.cfg
indicator-ppa-download-statistics/po/: indicator-ppa-download-statistics.pot
indicator-ppa-download-statistics/po/cs/: indicator-ppa-download-statistics.po
indicator-ppa-download-statistics/po/ru/: indicator-ppa-download-statistics.po
indicator-ppa-download-statistics/src/: indicator-ppa-download-statistics.py  ppa.py  unittests.py
indicator-ppa-download-statistics/src/indicatorppadownloadstatistics/: indicator-ppa-download-statistics.py  ppa.py
indicator-test/: CHANGELOG.md  LICENSE.txt  README.md  build-debian  indicator-test.py.desktop  pyproject.toml  setup.py
indicator-test/packaging/debian/: changelog  control  copyright  install
indicator-test/packaging/linux/debian/: control.cfg
indicator-test/po/: POTFILES.in  indicator-test.pot
indicator-test/po/en_GB/LC_MESSAGES/: indicator-test.po
indicator-test/po/ru/LC_MESSAGES/: indicator-test.po
indicator-test/src/: indicator-test.py
indicator-test/src/indicatortest/: indicator-test.py
indicator-virtual-box/: CHANGELOG.md  build-debian  pyproject.toml
indicator-virtual-box/packaging/debian/: changelog  control
indicator-virtual-box/packaging/linux/: indicator-virtual-box.py.desktop
indicator-virtual-box/packaging/linux/debian/: control.cfg
indicator-virtual-box/po/: indicator-virtual-box.pot
indicator-virtual-box/po/ru/: indicator-virtual-box.po
indicator-virtual-box/src/: indicator-virtual-box.py  unittests.py  virtualmachine.py
indicator-virtual-box/src/indicatorvirtualbox/: indicator-virtual-box.py
indicatorlunar/: MANIFESTspecific.in  README.md  pyproject.toml  pyprojectspecific.toml
indicatorlunar/development/: astroskyfield.py
indicatorlunar/frink/: sun.frink  test.frink
indicatorlunar/src/indicatorlunar/: CHANGELOG.md  README.md  astrobase.py  astropyephem.py  astroskyfield.py  dataprovider.py  dataproviderapparentmagnitude.py  dataprovidergeneralperturbation.py  dataproviderorbitalelement.py  eclipse.py  indicatorlunar.py  meteorshowertest.py
indicatorlunar/src/indicatorlunar/locale/: POTFILES.in  indicatorlunar.pot
indicatorlunar/src/indicatorlunar/packaging/linux/: indicatorlunar.py.desktop
indicatorlunar/tools/: _build_wheel.py  _create_ephemeris_planets.py  _create_ephemeris_stars.py  convert_minor_planet_or_comet_data.py  create_ephemeris_planets.py  create_ephemeris_stars.py  lowell_minorplanet_to_mpc.py  lowell_minorplanet_to_xephem.py  mpc_comet_to_xephem.py  mpc_minorplanet_to_xephem.py  utils_ephemeris.py
indicatorscriptrunner/: README.md  pyproject.toml  pyprojectspecific.toml
indicatorscriptrunner/src/indicatorscriptrunner/: CHANGELOG.md  README.md  indicatorscriptrunner.py  script.py
indicatorscriptrunner/src/indicatorscriptrunner/locale/: POTFILES.in  indicatorscriptrunner.pot
indicatorscriptrunner/src/indicatorscriptrunner/packaging/linux/: indicatorscriptrunner.py.desktop
indicatorstardate/: README.md  pyproject.toml  pyprojectspecific.toml
indicatorstardate/src/indicatorstardate/: CHANGELOG.md  README.md  example.py  indicatorstardate.py  stardate.py
indicatorstardate/src/indicatorstardate/locale/: POTFILES.in  indicatorstardate.pot
indicatorstardate/src/indicatorstardate/packaging/linux/: indicatorstardate.py.desktop
indicatorvirtualbox/: README.md  pyproject.toml  pyprojectspecific.toml
indicatorvirtualbox/src/indicatorvirtualbox/: CHANGELOG.md  README.md  indicatorvirtualbox.py  virtualmachine.py
indicatorvirtualbox/src/indicatorvirtualbox/locale/: POTFILES.in  indicatorvirtualbox.pot
(+430 files in other folders)
