[build-system]
requires = [ "setuptools >= 61.0" ]
build-backend = "setuptools.build_meta"


[project]
name = "indicator-fortune"
version = "1.0.42"
authors = [
    { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
maintainers = [
    { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
description = "Application indicator which displays fortunes."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Topic :: Games/Entertainment :: Fortune Cookies"
]


[project.urls]
homepage = "https://launchpad.net/~thebernmeister/+archive/ubuntu/ppa"