[build-system]
requires = [ "setuptools >= 61.0" ]
build-backend = "setuptools.build_meta"


[project]
name = "indicator-lunar"
version = "1.0.101"
authors = [
    { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
maintainers = [
    { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
description = "Application indicator for the home astronomer."
dependencies = [
  "PyGObject"
]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
  "ephem",
  "sgp4",
]   #TODO Check!!!  Not going to work unless can resolve the install/run with venv.


[project.urls]
homepage = "https://launchpad.net/~thebernmeister/+archive/ubuntu/ppa"
