[build-system]
requires = [ "setuptools >= 61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "indicator-test"
version = "1.0.7"
authors = [
    { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
maintainers = [
    { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
description = "Application indicator to test indicator functionality."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Testing"
]

[project.urls]
homepage = "https://launchpad.net/~thebernmeister/+archive/ubuntu/ppa"

[tool.setuptools.package-data]
#"indicatortest.locale" = [ "**/*.mo" ]
"indicatortest.locale" = [ "**/*.po", "*.pot", "**/*.mo" ]

#[tool.setuptools.exclude-package-data]
#"indicatortest.locale" = [ "*.pot", "**/*.po" ]


# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
# https://setuptools.pypa.io/en/latest/userguide/miscellaneous.html
# https://discuss.python.org/t/purpose-of-an-sdist/4639/13
