[build-system]
requires = [ "setuptools >= 61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "indicator-test"
version = "1.0.6"
authors = [
    { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
maintainers = [
    { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
description = "Application indicator to test indicator functionality."
dependencies = [
  "PyGObject"
]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Testing"
]

[project.urls]
homepage = "https://launchpad.net/~thebernmeister/+archive/ubuntu/ppa"

#TODO Need to add this to all other indicator's pyproject.toml
#TODO How to include Indicator Lunar stars.dat/planets.bsp?
[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.package-data]
"indicatortest.icons" = [ "**/*.svg"  ]
"indicatortest.locale" = [ "**/*.mo", "**/*.po", "**/*.pot"  ]
"indicatortest.packaging" = [ "**/*.desktop"  ]

#TODO Can we instead do this:
#"indicatortest" = [ "**/*.desktop", "**/*.mo", "**/*.po", "**/*.pot", "**/*.svg"  ]

