[build-system]
requires = [ "setuptools >= 61.0" ]
build-backend = "setuptools.build_meta"


[project]
name = "indicator-virtual-box"
version = "1.0.74"
authors = [
    { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
maintainers = [
    { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
description = "Application indicator for VirtualBox™ virtual machines."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Topic :: Utilities"
]


[project.urls]
homepage = "https://launchpad.net/~thebernmeister/+archive/ubuntu/ppa"
