[build-system]
requires = [ "setuptools >= 61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "indicatorlunar"
version = "1.0.101"
authors = [
  { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
maintainers = [
  { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
description = "Application indicator for the home astronomer."
dependencies = [
  "ephem",
  "PyGObject",
  "requests",
  "sgp4"
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 6 - Mature",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering :: Astronomy"
]

[project.urls]
homepage = "https://pypi.org/project/indicatorlunar"

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.package-data]
indicatorlunar = [
  "CHANGELOG.md",
  "icons/*/*.svg",
  "locale/*.pot",
  "locale/*/LC_MESSAGES/*.mo",
  "locale/*/LC_MESSAGES/*.po",
  "packaging/linux/*.desktop",
  "packaging/linux/*.sh"
]
