[build-system]
requires = [ "setuptools >= 61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "indicatorscriptrunner"
version = "1.0.25"
authors = [
  { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
maintainers = [
  { name = "Bernard Giannetti", email = "thebernmeister@hotmail.com" }
]
description = "Application indicator to run a terminal command or script from an indicator."
dependencies = [
  "PyGObject"
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 6 - Mature",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.8",
  "Topic :: Utilities"
]

[project.urls]
homepage = "https://pypi.org/project/indicatorscriptrunner"

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.package-data]
indicatorscriptrunner = [
  "CHANGELOG.md",
  "icons/*/*.svg",
  "locale/*.pot",
  "locale/*/LC_MESSAGES/*.mo",
  "locale/*/LC_MESSAGES/*.po",
  "packaging/linux/*.desktop",
  "packaging/linux/*.sh"
]
